refactor: resolve SonarCloud issues and eliminate all build warnings (#513)
* test: refresh basic_spring_maven_project fixtures and ignore bin/ dirs

Move the spring fixtures to spring-boot-starter-webmvc(-test), Java 17 and
the current plugin snapshot, and regenerate tree_expected.txt to match.

* refactor: resolve SonarCloud issues and eliminate all build warnings

Fixes ~70 open SonarCloud issues across the three modules without behavior
changes:

- depclean-core: protected ctor in AbstractDebloater (S5993), replace
  Stream.peek logging with a shared filter helper (S3864), rewrite
  ConstantPoolParser loop without in-body counter mutation and merge the
  duplicated INVOKE_DYNAMIC case (S127/S1871/S112), private ctor in
  DefaultCallGraph (S1118), equals in DebloatedDependency (S2160), split
  Dependency.findRelatedClasses into jar/directory helpers (S3776/S1117),
  decompose JarUtils entry extraction (S3776/S4087), test naming and empty
  method fixes (S115/S116/S117/S1186).
- depclean-maven-plugin: static DefaultCallGraph access in NodeAdapter
  (S2209), specific exceptions in MavenDependencyManager (S112), rename
  shadowing local (S1117), mutable list returns in MavenInvoker.
- depclean-gradle-plugin: decompose the 400-line DepCleanGradleAction
  .execute into focused helpers with a CoordinateSets record (S3776, cc
  71->low), BUILD_DIR constant (S1192), static setter for the artifact
  configuration map (S2696), handle createNewFile result (S899),
  Stream.toList (S6204), StringBuilder.isEmpty (S7158), slf4j logger
  instead of System.out in DependencyUtils/JsonResultWriter (S106),
  extract helpers in DependencyUtils and the analyzer (S3776/S135),
  private ctor in GradleWritingUtils (S1118).
- .sonarcloud.properties: exclude IT/FT fixture projects (default
  packages, commented-out code and empty tests are intentional there).

Remaining issues are won't-fix: S107/S1452 need public API breaks and
S6204/S6206/S6208/S6355 suggest Java 9+ syntax in Java 8 main